# infra-manual

./: .gitignore  .gitreview  README.md  README.rst  hotpot  requirements.txt  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  core.rst  creators.rst  developers.rst  drivers.rst  index.rst  irc.rst  job-names.rst  notes  python.rst  sandbox.rst  testing.rst  third-party.rst  zuulv3.rst
doc/source/content/: sandbox.rst
doc/source/static/css/: sidebar.css
