[metadata]
name = infra-manual
summary = OpenStack Project Infrastructure Manual
description-file =
    README.rst
author = OpenStack
author-email = openstack-infra@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
