[metadata]
name = infra-manual
summary = OpenDev Manual
description-file =
    README.rst
author = OpenDev
author-email = openstack-infra@lists.openstack.org
home-page = http://www.opendev.org/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
